--- a/src/server/data/lang/en.json
+++ b/src/server/data/lang/en.json
@@ -16,13 +16,14 @@
   "language": "Language",
   "en": "English",
   "de": "German",
-  "ru": "Russian",
+  "es": "Spanish",
   "vaccinesAdministered": "Vaccines Administered",
-  "7DayAverage": "Average Cases in the last 7 days",
+  "7DayAverage": "7 Day Average",
   "immunityPercentHelp": "Immunity Percentage is calculated by taking the total number of vaccinations and dividing it by the total population.",
   "deathRateHelp": "The Death Rate is calculated by taking the total number of cases and dividing it by the total number of COVID-related deaths.",
   "recoveringHelp": "This percentage is calculated by taking the 7 Day Average of a Country a week ago, and comparing it to the current day's 7 day average.",
   "hotspotHelp": "This percentage is calculated by taking the 7 Day Average of a Country a week ago, and comparing it to the current day's 7 day average.",
   "vaccinationHelp": "This percentage is calculated based on the number of Vaccines administered and dividing by the countries total population.",
-  "about": "About"
+  "about": "About",
+  "asOf": "as of "
 }
