Implemented Paulti and Evans Changes

--- a/src/server/data/lang/de.json
+++ b/src/server/data/lang/de.json
@@ -3,10 +3,10 @@
   "deathsThisWeek": "Todesfälle diese Woche",
   "immunityPercent": "Immunität Prozent",
   "deathRate": "Todesrate",
-  "casesByDay": "Fälle nach Tag",
+  "casesByDay": "Fälle nach Tag für ",
   "recovering": "Wiederherstellen",
   "hotspots": "Hotspots",
-  "vaccinationsByDay": "Impfungen bei Tag",
+  "vaccinationsByDay": "Impfungen bei Tag für ",
   "topVaccinatingCountries": "Top-Impfländer",
   "noDataReported": "Keine Daten gemeldet",
   "covidFiguresFor": "COVID Zahlen für ",
