--- a/src/server/data/lang/es.json
+++ b/src/server/data/lang/es.json
@@ -3,10 +3,10 @@
   "deathsThisWeek": "Muertes esta semana",
   "immunityPercent": "Porcentaje de inmunidad",
   "deathRate": "Tasa de mortalidad",
-  "casesByDay": "Casos por día",
+  "casesByDay": "Casos por día para ",
   "recovering": "Recuperando",
   "hotspots": "Hotspots",
-  "vaccinationsByDay": "Vacunas por día",
+  "vaccinationsByDay": "Vacunas por día para ",
   "topVaccinatingCountries": "Principales países de vacunación",
   "noDataReported": "No se informaron datos",
   "covidFiguresFor": "Figuras COVID para ",
