--- a/src/server/data/lang/en.json
+++ b/src/server/data/lang/en.json
@@ -3,10 +3,10 @@
   "deathsThisWeek": "Deaths this Week",
   "immunityPercent": "Percent Vaccinated",
   "deathRate": "Death Rate",
-  "casesByDay": "Cases by Day",
+  "casesByDay": "Cases by Day for ",
   "recovering": "Recovering",
   "hotspots": "Hotspots",
-  "vaccinationsByDay": "Vaccinations by Day",
+  "vaccinationsByDay": "Vaccinations by Day for ",
   "topVaccinatingCountries": "Top Vaccinating Countries",
   "noDataReported": "No Data Reported",
   "covidFiguresFor": "COVID Figures for ",
@@ -21,8 +21,8 @@
   "7DayAverage": "7 Day Average",
   "immunityPercentHelp": "Vaccination Percentage is calculated by taking the total number of vaccinations and dividing it by the total population.",
   "deathRateHelp": "The Death Rate is calculated by taking the total number of cases and dividing it by the total number of COVID-related deaths.",
-  "recoveringHelp": "This percentage is calculated by taking the 7 Day Average of a Country a week ago, and comparing it to the current day's 7 day average.",
-  "hotspotHelp": "This percentage is calculated by taking the 7 Day Average of a Country a week ago, and comparing it to the current day's 7 day average.",
+  "recoveringHelp": "Recovering countries have a significantly lower 7 day average than they did a week ago.",
+  "hotspotHelp": "Hotspots are countries who's 7 day average today is significantly greater than their 7 day average a week ago.",
   "vaccinationHelp": "This percentage is calculated based on the number of Vaccines administered and dividing by the countries total population.",
   "about": "About",
   "asOf": "as of "
