Added Proper Routing

--- a/src/server/data/lang/en.json
+++ b/src/server/data/lang/en.json
@@ -1,4 +1,5 @@
 {
+  "home": "Home",
   "casesThisWeek": "Cases this Week",
   "deathsThisWeek": "Deaths this Week",
   "immunityPercent": "Percent Vaccinated",
